--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memoryforest",
+  "name": "notefores",
   "version": "1.0.0",
   "description": "Full-stack web application",
   "scripts": {
