Fix : 주석 및 오타 수정

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notefores",
+  "name": "noteforest",
   "version": "1.0.0",
   "description": "Full-stack web application",
   "scripts": {
