--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,5 +17,14 @@
     "svelte-check": "^4.1.5",
     "typescript": "~5.7.2",
     "vite": "^6.3.1"
+  },
+  "dependencies": {
+    "@material/theme": "^14.0.0",
+    "@smui/button": "8.0.0-beta.3",
+    "@smui/card": "8.0.0-beta.3",
+    "@smui/common": "8.0.0-beta.3",
+    "@smui/drawer": "8.0.0-beta.3",
+    "@smui/list": "8.0.0-beta.3",
+    "@smui/top-app-bar": "8.0.0-beta.3"
   }
 }
