--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,11 @@
     "@smui/common": "8.0.0-beta.3",
     "@smui/drawer": "8.0.0-beta.3",
     "@smui/list": "8.0.0-beta.3",
-    "@smui/top-app-bar": "8.0.0-beta.3"
+    "@smui/top-app-bar": "8.0.0-beta.3",
+    "@tiptap/core": "^2.14.0",
+    "@tiptap/extension-focus": "^2.14.0",
+    "@tiptap/extension-placeholder": "^2.14.0",
+    "@tiptap/extension-typography": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0"
   }
 }
