--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,31 +5,26 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
     "clean": "rimraf dist node_modules"
   },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tsconfig/svelte": "^5.0.4",
-    "svelte": "^5.23.1",
-    "svelte-check": "^4.1.5",
-    "typescript": "~5.7.2",
-    "vite": "^6.3.1"
-  },
   "dependencies": {
-    "@material/theme": "^14.0.0",
-    "@smui/button": "8.0.0-beta.3",
-    "@smui/card": "8.0.0-beta.3",
-    "@smui/common": "8.0.0-beta.3",
-    "@smui/drawer": "8.0.0-beta.3",
-    "@smui/list": "8.0.0-beta.3",
-    "@smui/top-app-bar": "8.0.0-beta.3",
-    "@tiptap/core": "^2.14.0",
-    "@tiptap/extension-focus": "^2.14.0",
-    "@tiptap/extension-placeholder": "^2.14.0",
-    "@tiptap/extension-typography": "^2.14.0",
-    "@tiptap/starter-kit": "^2.14.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.25.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^6.3.5"
   }
 }
