--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "gray-matter": "^4.0.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
