Settimg : 밀크다운 준비

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,32 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@milkdown/core": "6.5.4",
+    "@milkdown/plugin-block": "6.5.4",
+    "@milkdown/plugin-clipboard": "6.5.4",
+    "@milkdown/plugin-cursor": "6.5.4",
+    "@milkdown/plugin-history": "6.5.4",
+    "@milkdown/plugin-listener": "6.5.4",
+    "@milkdown/plugin-menu": "6.5.4",
+    "@milkdown/plugin-prism": "6.5.4",
+    "@milkdown/plugin-slash": "6.5.4",
+    "@milkdown/plugin-tooltip": "6.5.4",
+    "@milkdown/preset-commonmark": "6.5.4",
+    "@milkdown/preset-gfm": "6.5.4",
+    "@milkdown/prose": "6.5.4",
+    "@milkdown/react": "6.5.4",
+    "@milkdown/theme-nord": "6.5.4",
+    "@milkdown/utils": "6.5.4",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
