fix : 에디터 고치기 2트

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,28 +13,20 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@milkdown/core": "6.5.4",
-    "@milkdown/plugin-block": "6.5.4",
-    "@milkdown/plugin-clipboard": "6.5.4",
-    "@milkdown/plugin-cursor": "6.5.4",
-    "@milkdown/plugin-history": "6.5.4",
-    "@milkdown/plugin-listener": "6.5.4",
-    "@milkdown/plugin-menu": "6.5.4",
-    "@milkdown/plugin-prism": "6.5.4",
-    "@milkdown/plugin-slash": "6.5.4",
-    "@milkdown/plugin-tooltip": "6.5.4",
-    "@milkdown/preset-commonmark": "6.5.4",
-    "@milkdown/preset-gfm": "6.5.4",
-    "@milkdown/prose": "6.5.4",
-    "@milkdown/react": "6.5.4",
-    "@milkdown/theme-nord": "6.5.4",
-    "@milkdown/utils": "6.5.4",
+    "@milkdown/core": "^7.13.1",
+    "@milkdown/plugin-clipboard": "^7.13.1",
+    "@milkdown/plugin-history": "^7.13.1",
+    "@milkdown/plugin-listener": "^7.13.1",
+    "@milkdown/preset-commonmark": "^7.13.1",
+    "@milkdown/preset-gfm": "^7.13.1",
+    "@milkdown/react": "^7.13.1",
+    "@milkdown/theme-nord": "^7.13.1",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
