--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,20 +13,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@milkdown/core": "^7.13.1",
-    "@milkdown/plugin-clipboard": "^7.13.1",
-    "@milkdown/plugin-history": "^7.13.1",
-    "@milkdown/plugin-listener": "^7.13.1",
-    "@milkdown/preset-commonmark": "^7.13.1",
-    "@milkdown/preset-gfm": "^7.13.1",
+    "@milkdown/crepe": "^7.13.1",
     "@milkdown/react": "^7.13.1",
-    "@milkdown/theme-nord": "^7.13.1",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
