--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,18 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@milkdown/crepe": "^7.13.1",
-    "@milkdown/react": "^7.13.1",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "highlight.js": "^11.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
