--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "clean": "rimraf dist node_modules"
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "",
