--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "clean": "rimraf dist node_modules"
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
