--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "concurrently \"pnpm run dev:backend\" \"pnpm run dev:frontend\"",
     "dev:backend": "pnpm --filter backend run dev",
     "dev:frontend": "pnpm --filter frontend run dev",
-    "build": "pnpm run build:backend && pnpm run build:frontend",
+    "build": "pnpm clean && pnpm run build:backend && pnpm run build:frontend",
     "build:backend": "pnpm --filter backend run build",
     "build:frontend": "pnpm --filter frontend run build",
     "start": "pnpm --filter backend run start",
-    "clean": "pnpm --filter backend run clean && pnpm --filter frontend run clean && rimraf node_modules"
+    "clean": "pnpm --filter backend run clean && pnpm --filter frontend run clean"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
