--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
