improve : monaco editor 도입
쓰레기같은 텍스트필드 기반 에디터는 이제 끝장이다~

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "removeComments": true,
     "resolveJsonModule": true
   },
   "include": ["src/**/*"],
