--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@types/hast": "^3.0.4",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "highlight.js": "^11.11.1",
+    "monaco-themes": "^0.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
