--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "remark-math": "^6.0.0",
     "rollup-plugin-visualizer": "^6.0.3",
     "unist-util-visit": "^5.0.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
